[package]
name = "maxine-client"
version = "1.0.0"
edition = "2021"
description = "Rust client SDK for Maxine service registry"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }